objects/Data_Element_Identifier__c.object
<CustomObject>
    <fields>
        <fullName>Book_Name__c</fullName>
        <label>Book Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Group_Name__c</fullName>
        <label>Criteria Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Criteria_Groups</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Element_Description__c</fullName>
        <label>Data Element Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Element_Identifier__c</fullName>
        <label>Data Element Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Element_Name__c</fullName>
        <label>Data Element Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Type_Code__c</fullName>
        <label>Display Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>SFDC Field Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>List_Product_Description__c</fullName>
        <label>List Product Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Product_Identifier__c</fullName>
        <label>List Product Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Product_Name__c</fullName>
        <label>List Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Mapping__c</fullName>
        <label>Value Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Data Element Identifier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Data_Element_Identifier__c</columns>
        <columns>NAME</columns>
        <columns>Data_Element_Name__c</columns>
        <columns>Book_Name__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Value_Mapping__c</columns>
        <columns>Display_Type_Code__c</columns>
        <columns>Data_Element_Description__c</columns>
        <columns>List_Product_Description__c</columns>
        <columns>List_Product_Identifier__c</columns>
        <columns>List_Product_Name__c</columns>
        <columns>Criteria_Group_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Data Element Identifier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Element Identifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>